doc: add version in doc header

--- a/templates/salt.hbs
+++ b/templates/salt.hbs
@@ -29,11 +29,25 @@
             color: rgb(74, 85, 95) !important;
         }
 
+        .bq {
+            padding: 1em;
+            border-left: 2px solid slategray;
+            background-color: #ececee4a;
+        }
+
+        .p-2-border {
+            padding: 0.2em;
+            border: 1px solid slateblue;
+            border-radius: 5px;
+        }
+
         a {
             color: slateblue !important;
         }
 
         h4 {
+            padding-top: 0.5em;
+            padding-bottom: 0.5em;
             font-weight: bold !important;
             color: rgb(74, 85, 95) !important;
         }
@@ -69,6 +83,7 @@
             <div class="navbar-brand">
                 🧂 <b>Docs</b>
             </div>
+            <code>v{{version}}</code>
         </nav>
 
         <div class="row">
