--- a/templates/salt.hbs
+++ b/templates/salt.hbs
@@ -10,9 +10,13 @@
         @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,700;1,300;1,700&display=swap');
 
         body {
-            background-image: radial-gradient(circle farthest-corner at 10% 20%, rgba(234, 249, 249, 0.67) 0.1%, rgba(239, 249, 251, 0.63) 90.1%);
+            background-image: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
             font-family: 'Poppins', sans-serif !important;
             color: rgb(72, 82, 92) !important;
+        }
+
+        .container-fluid {
+            height: 100vh;
         }
 
         .navbar .navbar-light {
@@ -54,7 +58,9 @@
 
         code {
             color: slateblue !important;
-            background-color: #ececee !important;
+            background-color: #fbfbfb7b !important;
+            padding: 0.1em;
+            border-radius: 2px;
         }
 
         #s-nav-heading {
@@ -64,9 +70,9 @@
         pre {
             margin-top: 1em !important;
             margin-bottom: 1em !important;
-            border: 1px solid #d7d7d7;
+            border: 1px solid #e5e4e4;
             border-radius: 5px !important;
-            background-color: #ececee !important;
+            background-color: #fbfbfb7b !important;
             padding: 1em !important;
         }
     </style>
