doc: add support for anchor tags

--- a/templates/salt.hbs
+++ b/templates/salt.hbs
@@ -45,9 +45,16 @@
             border-radius: 5px;
         }
 
+        .nav>a {
+            color: slateblue !important;
+            text-decoration: none !important;
+        }
+
         a {
             color: slateblue !important;
+            text-decoration: underline !important;
         }
+
 
         h4 {
             padding-top: 0.5em;
