doc: brand same color as headings

--- a/templates/salt.hbs
+++ b/templates/salt.hbs
@@ -19,6 +19,10 @@
             height: 100vh;
         }
 
+        .navbar-brand {
+            color: rgb(74, 85, 95) !important;
+        }
+
         .navbar .navbar-light {
             background-color: transparent !important;
         }
