--- a/templates/salt.hbs
+++ b/templates/salt.hbs
@@ -10,6 +10,7 @@
         @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,700;1,300;1,700&display=swap');
 
         body {
+            height: 100% auto;
             background-image: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
             font-family: 'Poppins', sans-serif !important;
             color: rgb(72, 82, 92) !important;
@@ -165,6 +166,19 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
+
+    <script type="module">
+        import { Graphviz } from "https://cdn.jsdelivr.net/npm/@hpcc-js/wasm/dist/graphviz.js";
+        const graphviz = await Graphviz.load();
+
+        function draw_into_element(dot, element_code) {
+            const svg = graphviz.dot(dot);
+            const div = document.getElementById(element_code);
+            div.innerHTML = graphviz.layout(dot, "svg", "dot");
+        }
+
+        {{{ script_content }}}
+    </script>
 </body>
 
 </html>
