--- a/templates/salt.hbs
+++ b/templates/salt.hbs
@@ -7,12 +7,12 @@
     <title>SALT | {{ project }}</title>
 
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,700;1,300;1,700&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&display=swap');
 
         body {
             height: 100% auto;
             background-image: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
-            font-family: 'Poppins', sans-serif !important;
+            font-family: 'Quicksand', sans-serif !important;
             color: rgb(72, 82, 92) !important;
         }
 
