--- a/templates/salt.hbs
+++ b/templates/salt.hbs
@@ -7,13 +7,15 @@
     <title>SALT | {{ project }}</title>
 
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Mono:wght@400;700&family=Prompt:ital,wght@0,300;0,600;1,300;1,600&display=swap');
 
         body {
             height: 100% auto;
             background-image: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
-            font-family: 'Quicksand', sans-serif !important;
+            background-attachment: fixed;
+            font-family: 'Prompt', sans-serif !important;
             color: rgb(72, 82, 92) !important;
+            font-size: 1em !important;
         }
 
         .container-fluid {
@@ -73,6 +75,7 @@
             background-color: #fbfbfb7b !important;
             padding: 0.1em;
             border-radius: 2px;
+            font-family: 'Noto Sans Mono', monospace !important;
         }
 
         #s-nav-heading {
@@ -86,6 +89,7 @@
             border-radius: 5px !important;
             background-color: #fbfbfb7b !important;
             padding: 1em !important;
+            font-family: 'Noto Sans Mono', monospace !important;
         }
     </style>
 
@@ -177,7 +181,7 @@
             div.innerHTML = graphviz.layout(dot, "svg", "dot");
         }
 
-        {{{ script_content }}}
+        {{{script_content}}}
     </script>
 </body>
 
